# mspdebug-embedded

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md
assets/: blinky-g2553.elf
scripts/: devicelist.sh  mkphf.py
src/: cfg.rs  driver.rs  error.rs  infomem.rs  lib.rs
