[package]
name = "mspdebug-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "msprun"
required-features = ["msprun"]

[dependencies]
clap = { version = "4.1.8", optional = true }
eyre = { version = "0.6.8", optional = true }
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
serial_test = "1.0.0"

[features]
msprun = ["dep:clap", "dep:eyre"]
