[package]
name = "mspdebug-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "msprun"
required-features = ["msprun"]

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.1.8", optional = true, features = ["derive"] }
command-group = "2.1.0"
ctrlc = "3.2.5"
elf = { version = "0.7.2", default_features = false, features = ["std"] }
eyre = { version = "0.6.8", optional = true }
phf = { version = "0.11.1", features = ["macros"] }
strum = "0.23"
strum_macros = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default_features = false, features = ["winbase"] }

[dev-dependencies]
serial_test = "1.0.0"

[features]
msprun = ["dep:clap", "dep:eyre"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
